Catalogo diseño y bootstrap footer

--- a/catalogo.html
+++ b/catalogo.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pins</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="catalogo.css">
 </head>
 <body>
     <nav>
@@ -34,24 +39,132 @@
         </div>
     </nav>
 
-    <header>
-        <h1>Pins</h1>
-    </header>
+        <h1>CATÁLOGO</h1>
 
-    <div class="row">
-        <aside>
-            <h2>ASIDE</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio veritatis corrupti enim iure natus dolorum rerum beatae inventore voluptatem commodi aperiam laudantium minus in quod voluptatum praesentium, delectus nemo possimus!</p>
-        </aside>
-        <section>
-            <h2>SECTION</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore officiis impedit quisquam eaque. Esse quibusdam ducimus quos optio tempora veniam, quae nemo quidem architecto nihil iure doloribus omnis soluta placeat?</p>
-        </section> 
+<section>
+        <div class="card estilo-b">
+            <div class="img-container">
+                <img src="FotosPins/Noche2.jpg" alt="pin 1">
+                <span class="price">Promoción 2 x $100</span>
+                <span class="favorite">
+                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m11.4454 20.7608-7.86923-8.1945c-2.21653-2.3081-2.07695-6.0927.30305-8.21701 2.36113-2.10748 5.94122-1.69824 7.80708.89242l.3137.43553.3137-.43553c1.8659-2.59066 5.4459-2.9999 7.8071-.89242 2.38 2.12431 2.5196 5.90891.303 8.21701l-7.8692 8.1945c-.3063.3189-.8029.3189-1.1092 0z" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
+            </div>
+            <p>La Noche Estrellada</p>
+            <p>$60 MXN</p>
+            <a href="#">Añadir a carrito</a>
+        </div>
+
+        <div class="card estilo-b">
+            <div class="img-container">
+                <img src="FotosPins/el grito.jpg" alt="pin 2">
+                <span class="price">Promoción 2 x $100</span>
+                <span class="favorite">
+                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m11.4454 20.7608-7.86923-8.1945c-2.21653-2.3081-2.07695-6.0927.30305-8.21701 2.36113-2.10748 5.94122-1.69824 7.80708.89242l.3137.43553.3137-.43553c1.8659-2.59066 5.4459-2.9999 7.8071-.89242 2.38 2.12431 2.5196 5.90891.303 8.21701l-7.8692 8.1945c-.3063.3189-.8029.3189-1.1092 0z" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
+            </div>
+            <p>El Grito de Edvard Munch </p>
+            <p>$60 MXN</p>
+            <a href="#">Añadir a carrito</a>
+        </div>
+
+        <div class="card estilo-b">
+            <div class="img-container">
+                <img src="FotosPins/vangogh.jpg" alt="pin 3">
+                <span class="price">Promoción 2 x $100</span>
+                <span class="favorite">
+                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m11.4454 20.7608-7.86923-8.1945c-2.21653-2.3081-2.07695-6.0927.30305-8.21701 2.36113-2.10748 5.94122-1.69824 7.80708.89242l.3137.43553.3137-.43553c1.8659-2.59066 5.4459-2.9999 7.8071-.89242 2.38 2.12431 2.5196 5.90891.303 8.21701l-7.8692 8.1945c-.3063.3189-.8029.3189-1.1092 0z" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
+            </div>
+            <p>Autoretrato de Van Gogh</p>
+            <p>$60 MXN</p>
+            <a href="#">Añadir a carrito</a>
+        </div>
+
+        <div class="card estilo-b">
+            <div class="img-container">
+                <img src="FotosPins/girasoles vangogh.jpg" alt="pin 4">
+                <span class="price">Promoción 2 x $100</span>
+                <span class="favorite">
+                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m11.4454 20.7608-7.86923-8.1945c-2.21653-2.3081-2.07695-6.0927.30305-8.21701 2.36113-2.10748 5.94122-1.69824 7.80708.89242l.3137.43553.3137-.43553c1.8659-2.59066 5.4459-2.9999 7.8071-.89242 2.38 2.12431 2.5196 5.90891.303 8.21701l-7.8692 8.1945c-.3063.3189-.8029.3189-1.1092 0z" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
+            </div>
+            <p>Girasoles de Van Gogh</p>
+            <p>$60 MXN</p>
+            <a href="#">Añadir a carrito</a>
+        </div>
+
+        <div class="card estilo-b">
+            <div class="img-container">
+                <img src="FotosPins/lilys.jpg" alt="pin 5">
+                <span class="price">Promoción 2 x $100</span>
+                <span class="favorite">
+                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m11.4454 20.7608-7.86923-8.1945c-2.21653-2.3081-2.07695-6.0927.30305-8.21701 2.36113-2.10748 5.94122-1.69824 7.80708.89242l.3137.43553.3137-.43553c1.8659-2.59066 5.4459-2.9999 7.8071-.89242 2.38 2.12431 2.5196 5.90891.303 8.21701l-7.8692 8.1945c-.3063.3189-.8029.3189-1.1092 0z" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
+            </div>
+            <p>Lilys</p>
+            <p>$60 MXN</p>
+            <a href="#">Añadir a carrito</a>
+        </div>
+
+        <div class="card estilo-b">
+            <div class="img-container">
+                <img src="FotosPins/girasoles1.jpg" alt="pin 6">
+                <span class="price">Promoción 2 x $100</span>
+                <span class="favorite">
+                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m11.4454 20.7608-7.86923-8.1945c-2.21653-2.3081-2.07695-6.0927.30305-8.21701 2.36113-2.10748 5.94122-1.69824 7.80708.89242l.3137.43553.3137-.43553c1.8659-2.59066 5.4459-2.9999 7.8071-.89242 2.38 2.12431 2.5196 5.90891.303 8.21701l-7.8692 8.1945c-.3063.3189-.8029.3189-1.1092 0z" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
+            </div>
+            <p>Girasoles</p>
+            <p>$60 MXN</p>
+            <a href="#">Añadir a carrito</a>
+        </div>
+</section> 
+  
+
+<footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Form -->
+      <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for our newsletter</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-md-5 col-12">
+              <!-- Email input -->
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="form5Example29" class="form-control" />
+                <label class="form-label" for="form5Example29">Email address</label>
+              </div>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-auto">
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-outline-light mb-4">
+                Subscribe
+              </button>
+            </div>
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </form>
+      </section>
+      <!-- Section: Form -->
     </div>
-
-    <footer>
-        <h2>FOOTER</h2>
-    </footer>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 
     <script src="apps.js"></script>
 </body>
