--- a/catalogo.html
+++ b/catalogo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pins</title>
+    <title>Catálogo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -12,7 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="catalogo.css">
+
+    
 </head>
+
+
 <body>
     <nav>
         <div class="logo">
@@ -23,7 +27,7 @@
                 <a href="/index.html">HOME</a>
             </li>
             <li>
-                <a href="/catalogo.html">CATALOGO</a>
+                <a href="/catalogo.html">CATÁLOGO</a>
             </li>
             <li>
                 <a href="/faqs.html">FAQs</a>
@@ -51,6 +55,23 @@
             </div>
             <p>La Noche Estrellada</p>
             <p>$60 MXN</p>
+    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#miModal">Ver más</button>
+        <div class="modal fade" id="miModal" tabindex="-1" aria-hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class = "modal-header">
+                        <h5 class="modal-title" id="modalTitle">La Noche Estrellada</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class = "modal-body">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fuga dolores nam culpa nobis, illum eius deleniti omnis asperiores, eligendi blanditiis debitis ad fugiat quis officiis magnam facilis ipsum dolor.</p>
+                    </div>
+                    <div class = "modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div        >
             <a href="#">Añadir a carrito</a>
         </div>
 
@@ -165,7 +186,7 @@
     </div>
     <!-- Copyright -->
   </footer>
-
+  
     <script src="apps.js"></script>
 </body>
 </html>
