--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pins</title>
+    <title>La Ruta del Pin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -42,20 +42,18 @@
     <header>
       <div class="inicio">
         <p>Bienvenido!</p>
-        <a href="#">Crear Cuenta</a>
-        <a href="#">Ingresar</a>
+        <a href="signup.html">Crear Cuenta</a>
+        <a href="login.html">Ingresar</a>
       </div>
     </header>
 
     <div class="row">
-        <aside>
-            <h2>ASIDE</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio veritatis corrupti enim iure natus dolorum rerum beatae inventore voluptatem commodi aperiam laudantium minus in quod voluptatum praesentium, delectus nemo possimus!</p>
-        </aside>
         <section>
             <h2>SECTION</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore officiis impedit quisquam eaque. Esse quibusdam ducimus quos optio tempora veniam, quae nemo quidem architecto nihil iure doloribus omnis soluta placeat?</p>
+       
         </section> 
+
     </div>
     <footer class="bg-dark text-center text-white">
         <!-- Grid container -->
