--- a/faqs.html
+++ b/faqs.html
@@ -10,14 +10,14 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="faqs.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="faqs.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <h4>LA RUTA DEL PIN</h4>
+            <a href="/index.html">LA RUTA DEL PIN</a>
         </div>
         <ul class="nav-links">
             <li>
@@ -42,15 +42,19 @@
 
         <h1>FAQs</h1>
 
-    <div class="row">
-        <section>
-            <h2>Section</h2>
-            <p>¿Manejan envíos? Si, su costo es de $75 para envios locales (MTY) y en $100 para envios nacionales</p>
-            <p>¿Cuanto tarda el envío? Entregas locales de 1-2 días hábiles 
-                Entregas nacionales 3-5 días hábiles</p>
-            <p>¿Cuáles son sus redes sociales? En FB nos encuentras como  La Ruta del Pin y en IG como @larutadelpin. Nuestro  WhatsApp es 000-000-0000 </p>
-        </section>
-    </div>
+        <details>
+            <summary>¿Manejan envíos?</summary>
+            <p>Si, su costo es de $75 MXN para envios locales (MTY) y en $100 MXN para envio nacionales.</p>
+         </details>
+         <details>
+            <summary>¿Cuanto tarda el envío?</summary>
+            <p>Entregas locales de 1-2 días hábiles.</p>
+            <p>Entregas nacionales 3-5 días hábiles.</p>
+         </details>
+         <details>
+            <summary>¿Cúales son sus redes sociales?</summary>
+            <p>En FB nos encuentras como La Ruta del Pin y en IG como @larutadelpin. Nuestro Whatsapp es 000-000-0000.</p>
+         </details>
 
 
     <footer class="bg-dark text-center text-white">
