--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <div class="logo">
-            <h4>LA RUTA DEL PIN</h4>
+            <a href="/index.html">LA RUTA DEL PIN</a>
         </div>
         <ul class="nav-links">
             <li>
@@ -47,14 +47,73 @@
       </div>
     </header>
 
-    <div class="row">
-        <section>
-            <h2>SECTION</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore officiis impedit quisquam eaque. Esse quibusdam ducimus quos optio tempora veniam, quae nemo quidem architecto nihil iure doloribus omnis soluta placeat?</p>
-       
-        </section> 
+<h2>Los favoritos</h2>
 
+    <div class="grid-container">
+        <section>
+        <div class="card estilo-a">
+            <a href="#">
+            <div class="img-container">
+                <img src="FotosPins/calcifer2.jpg" alt="fav1"> 
+            </div>
+            <p>Calcifer Howl's Moving Castle </p> 
+            <strong>$60 MXN</strong> 
+            </a>
+        </div>
+
+        <div class="card estilo-a">
+            <a href="#">
+            <div class="img-container">
+                <img src="FotosPins/luffy.jpg" alt="fav2">
+            </div>
+            <p>One Piece</p> 
+            <strong>$60 MXN</strong>  
+            </a>
+        </div>
+
+        <div class="card estilo-a">
+            <a href="#">
+            <div class="img-container">
+                <img src="FotosPins/perrito.jpg" alt="fav3">
+            </div>  
+            <p>Zero The Night Before Christmas</p> 
+            <strong>$60 MXN</strong>
+            </a>
+        </div>
+
+        <div class="card estilo-a">
+            <a href="#">
+            <div class="img-container">
+                <img src="FotosPins/sol.jpg" alt="fav4">
+            </div>
+            <p>Sol</p> 
+            <strong>$60 MXN</strong>  
+            </a>
+        </div>    
+
+        <div class="card estilo-a">
+            <a href="#">
+            <div class="img-container">
+                <img src="FotosPins/luna.jpg" alt="fav5">
+            </div>
+            <p>Luna</p> 
+            <strong>$60 MXN</strong>  
+            </a>
+        </div>
+
+        <div class="card estilo-a">
+                <a href="#">
+                <div class="img-container">
+                    <img src="FotosPins/this is the way.jpg" alt="fav6">
+                </div>
+                <p>This is the way</p> 
+                <strong>$60 MXN</strong>  
+                </a>
+            </div>
     </div>
+    </section>
+    </div>
+
     <footer class="bg-dark text-center text-white">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
