--- a/catalogo.html
+++ b/catalogo.html
@@ -10,17 +10,15 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="catalogo.css">
-
-    
+    <link rel="stylesheet" href="main.css">
 </head>
 
 
 <body>
     <nav>
         <div class="logo">
-            <h4>LA RUTA DEL PIN</h4>
+            <a href="/index.html">LA RUTA DEL PIN</a>
         </div>
         <ul class="nav-links">
             <li>
@@ -44,7 +42,7 @@
     </nav>
 
         <h1>CATÁLOGO</h1>
-
+<div class="grid-container">
 <section>
         <div class="card estilo-b">
             <div class="img-container">
@@ -71,7 +69,7 @@
                 </div>
             </div>
         </div>
-    </div        >
+    </div>
             <a href="#">Añadir a carrito</a>
         </div>
 
@@ -81,7 +79,7 @@
                 <span class="price">Promoción 2 x $100</span>
                 <span class="favorite">
                     <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m11.4454 20.7608-7.86923-8.1945c-2.21653-2.3081-2.07695-6.0927.30305-8.21701 2.36113-2.10748 5.94122-1.69824 7.80708.89242l.3137.43553.3137-.43553c1.8659-2.59066 5.4459-2.9999 7.8071-.89242 2.38 2.12431 2.5196 5.90891.303 8.21701l-7.8692 8.1945c-.3063.3189-.8029.3189-1.1092 0z" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
-            </div>
+                </div>
             <p>El Grito de Edvard Munch </p>
             <p>$60 MXN</p>
             <a href="#">Añadir a carrito</a>
@@ -135,6 +133,7 @@
             <a href="#">Añadir a carrito</a>
         </div>
 </section> 
+</div>
   
 
 <footer class="bg-dark text-center text-white">
