--- a/contactanos.html
+++ b/contactanos.html
@@ -10,13 +10,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="contactanos.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <h4>LA RUTA DEL PIN</h4>
+            <a href="/index.html">LA RUTA DEL PIN</a>
         </div>
         <ul class="nav-links">
             <li>
