--- a/signup.html
+++ b/signup.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="username.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <h4>LA RUTA DEL PIN</h4>
+            <a href="/index.html">LA RUTA DEL PIN</a>
         </div>
         <ul class="nav-links">
             <li>
