--- a/catalogo.html
+++ b/catalogo.html
@@ -10,8 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="catalogo.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="catalogo2.css">
+    <link rel="stylesheet" href="catalogo.css">    
 </head>
 
 
@@ -42,6 +42,7 @@
     </nav>
 
         <h1>CATÁLOGO</h1>
+        
 <div class="grid-container">
 <section>
         <div class="card estilo-b">
@@ -53,23 +54,20 @@
             </div>
             <p>La Noche Estrellada</p>
             <p>$60 MXN</p>
-    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#miModal">Ver más</button>
-        <div class="modal fade" id="miModal" tabindex="-1" aria-hidden="true" aria-labelledby="modalTitle">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class = "modal-header">
-                        <h5 class="modal-title" id="modalTitle">La Noche Estrellada</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class = "modal-body">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fuga dolores nam culpa nobis, illum eius deleniti omnis asperiores, eligendi blanditiis debitis ad fugiat quis officiis magnam facilis ipsum dolor.</p>
-                    </div>
-                    <div class = "modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                </div>
+        <div>
+            <button class="btn btn-dark" onclick="openModal()">Ver más</button>
+        </div>
+        <div class="modal" id="modalAdd">
+            <div class="modal-container">
+                <div class="close-modal" onclick="closeModal()">X</div>
+                <h2>La Noche Estrellada</h2>
+                <p>Especificaciones
+                <br/>Peso : 7g
+                <br/>Altura: 2.54cm 
+                <br/>Ancho: 3.30cm</p>
+            <button class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
             </div>
         </div>
-    </div>
             <a href="#">Añadir a carrito</a>
         </div>
 
@@ -82,6 +80,20 @@
                 </div>
             <p>El Grito de Edvard Munch </p>
             <p>$60 MXN</p>
+        <div>
+            <button class="btn btn-dark" onclick="openModal()">Ver más</button>
+        </div>
+        <div class="modal" id="modalAdd">
+            <div class="modal-container">
+                <div class="close-modal" onclick="closeModal()">X</div>
+                <h2>El Grito de Edvard Munch</h2>
+                <p>Especificaciones
+                    <br/>Peso : 7g
+                    <br/>Altura: 2.54cm 
+                    <br/>Ancho: 3.30cm</p>
+                <button class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
+            </div>
+        </div>
             <a href="#">Añadir a carrito</a>
         </div>
 
@@ -94,6 +106,24 @@
             </div>
             <p>Autoretrato de Van Gogh</p>
             <p>$60 MXN</p>
+
+            <div>
+                <button class="btn btn-dark" onclick="openModal()">Ver más</button>
+            </div>
+
+            <div class="modal" id="modalAdd">
+                <div class="modal-container">
+                    <div class="close-modal" onclick="closeModal()">X</div>
+                    <h2>Autoretrato de Vangogh</h2>
+                    <p>Especificaciones</p>
+                    <p>Especificaciones
+                        <br/>Peso : 7g
+                        <br/>Altura: 2.54cm 
+                        <br/>Ancho: 3.30cm</p>
+                    <button>Aceptar</button>
+                    <button onclick="closeModal()">Cancelar</button>
+                </div>
+            </div>
             <a href="#">Añadir a carrito</a>
         </div>
 
@@ -106,6 +136,20 @@
             </div>
             <p>Girasoles de Van Gogh</p>
             <p>$60 MXN</p>
+        <div>
+            <button class="btn btn-dark" onclick="openModal()">Ver más</button>
+        </div>
+        <div class="modal" id="modalAdd">
+            <div class="modal-container">
+                <div class="close-modal" onclick="closeModal()">X</div>
+                <h2>Girasoles de Van Gogh</h2>
+                <p>Especificaciones
+                    <br/>Peso : 7g
+                    <br/>Altura: 2.54cm 
+                    <br/>Ancho: 3.30cm</p>
+                <button class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
+            </div>
+        </div>
             <a href="#">Añadir a carrito</a>
         </div>
 
@@ -118,6 +162,20 @@
             </div>
             <p>Lilys</p>
             <p>$60 MXN</p>
+        <div>
+            <button class="btn btn-dark" onclick="openModal()">Ver más</button>
+        </div>
+        <div class="modal" id="modalAdd">
+            <div class="modal-container">
+                <div class="close-modal" onclick="closeModal()">X</div>
+                <h2>Lilys</h2>
+                <p>Especificaciones
+                    <br/>Peso : 7g
+                    <br/>Altura: 2.54cm 
+                    <br/>Ancho: 3.30cm</p>
+                <button class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
+            </div>
+        </div>
             <a href="#">Añadir a carrito</a>
         </div>
 
@@ -130,6 +188,20 @@
             </div>
             <p>Girasoles</p>
             <p>$60 MXN</p>
+        <div>
+            <button class="btn btn-dark" onclick="openModal()">Ver más</button>
+        </div>
+        <div class="modal" id="modalAdd">
+            <div class="modal-container">
+                <div class="close-modal" onclick="closeModal()">X</div>
+                <h2>Girasoles</h2>
+                <p>Especificaciones
+                    <br/>Peso : 7g
+                    <br/>Altura: 2.54cm 
+                    <br/>Ancho: 3.30cm</p>
+                <button class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
+            </div>
+        </div>
             <a href="#">Añadir a carrito</a>
         </div>
 </section> 
@@ -185,7 +257,6 @@
     </div>
     <!-- Copyright -->
   </footer>
-  
     <script src="apps.js"></script>
 </body>
 </html>
